--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "sign": "node ./src/utils/dev/npmCommands.js sign",
+    "switch": "node ./src/utils/dev/npmCommands.js switch",
+    "update": "node ./src/utils/dev/npmCommands.js update",
+    "register": "node ./src/utils/dev/npmCommands.js register",
+    "help": "node ./src/utils/dev/npmCommands.js help"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -14,7 +19,14 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "boxen": "^4.1.0",
+    "chalk": "^2.4.2",
+    "fs-extra": "^8.0.1",
+    "inquirer": "^6.4.1",
+    "make-runnable": "^1.3.6",
+    "ora": "^3.4.0",
+    "shelljs": "^0.8.3",
   },
   "postcss": {
     "plugins": {
