--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "inquirer": "^6.4.1",
     "make-runnable": "^1.3.6",
     "ora": "^3.4.0",
-    "shelljs": "^0.8.3",
+    "types-for-adobe": "github:ten-A/types-for-adobe",
+    "shelljs": "^0.8.3"
   },
   "postcss": {
     "plugins": {
