--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "starlette": "^0.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
